# mass-transcriptor

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  start.sh
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_job_batches.py
backend/app/: config.py  db.py  main.py  migrations.py  models.py  schemas.py  worker.py
backend/app/api/: routes.py
backend/app/services/: assemblyai_account.py  auth.py  jobs.py  markdown.py  memberships.py  provider_settings.py  secrets.py  storage.py  tenancy.py
backend/app/services/providers/: assemblyai_provider.py  base.py  registry.py  whisper_provider.py
backend/tests/: conftest.py  test_assemblyai_account.py  test_auth_api.py  test_job_batch_api.py  test_job_worker.py  test_legacy_schema_migration.py  test_provider_registry.py  test_provider_settings_api.py  test_storage.py  test_tenancy.py  test_upload_api.py
docs/superpowers/plans/: 2026-04-03-audio-transcriber-mvp.md  2026-04-03-auth-multitenant.md  2026-04-04-whisper-language-setting.md
docs/superpowers/specs/: 2026-04-03-audio-transcriber-design.md  2026-04-03-auth-multitenant-design.md  2026-04-04-whisper-language-setting-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx  styles.css
frontend/src/components/: AuthForm.tsx  AuthShell.tsx  JobStatusBadge.tsx  JobsTable.tsx  ProtectedLayout.tsx  ProtectedRoute.tsx  ThemeToggle.tsx  (+2 more)
(+22 files in other folders)
